--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.63.1",
     "react-native-elements": "^2.2.1",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-picker-select": "^7.0.0",
     "react-native-reanimated": "^1.9.0",
     "react-native-restart": "0.0.17",
